Bug 1883722 - Update Firefox View stylesheets to use forced-colors instead of prefers-contrast to make room for macOS specific styling. r=morgan,desktop-theme-reviewers,fxview-reviewers?,#fxview-reviewers.
As part of the [HCM and Increased Contrast Support in FX project](https://docs.google.com/document/d/1x37hxRrP9B2c3luy7sz748PCuVygvD3REsluQRQpfYE/edit?usp=sharing), the Accessibility team is auditing existing `prefers-contrast` media query blocks in mozilla-central. For each block with `prefers-contrast` media we want to convert it to `forced-colors` where appropriate.

Refer to the [bug 1877780 #c0](https://bugzilla.mozilla.org/show_bug.cgi?id=1877780#c0) for more information about the project.

Differential Revision: https://phabricator.services.mozilla.com/D203650

--- a/browser/components/firefoxview/firefoxview.css
+++ b/browser/components/firefoxview/firefoxview.css
@@ -47,7 +47,7 @@
   }
 }
 
-@media (prefers-contrast) {
+@media (forced-colors) {
   :root {
     --fxview-element-background-hover: ButtonText;
     --fxview-element-background-active: ButtonText;
@@ -56,6 +56,12 @@
     --newtab-primary-action-background: LinkText;
     --newtab-background-color: Canvas;
     --newtab-background-color-secondary: Canvas;
+  }
+}
+
+@media (prefers-contrast) {
+  :root {
+    --fxview-border: var(--border-color);
   }
 }
 
