--- a/browser/components/firefoxview/fxview-tab-row.css
+++ b/browser/components/firefoxview/fxview-tab-row.css
@@ -12,7 +12,7 @@
   border-radius: 4px;
 }
 
-@media (prefers-contrast) {
+@media (forced-colors) {
   :host {
     --fxviewtabrow-element-background-hover: ButtonText;
     --fxviewtabrow-element-background-active: ButtonText;
@@ -61,7 +61,7 @@
   background-color: var(--fxviewtabrow-element-background-active);
 }
 
-@media (prefers-contrast) {
+@media (forced-colors) {
   a.fxview-tab-row-main,
   a.fxview-tab-row-main:hover,
   a.fxview-tab-row-main:active {
@@ -214,7 +214,7 @@
   }
 }
 
-@media (prefers-contrast) {
+@media (forced-colors) {
   .fxview-tab-row-button,
   button.fxview-tab-row-main {
     border: 1px solid ButtonText;
